# PixivBiu

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.beads/: metadata.json
.github/workflows/: docker.yml  pkg.yml
app/config/: biu_default.yml
app/lib/common/bookmark_sync/: main.py
app/lib/core/: biu.py
app/lib/core/dl/model/: dler_dl.py  dler_dl_single.py
app/lib/static/: file.py
app/plugin/do/: bookmark_sync_now.py  dl.py
cust/: __init__.py  immich_store.py
docs/: 需求文档.md  需求文档补充V1.md
tests/: README_TEST.md  test_bookmark_sync_cron.py  test_immich_mock.py
usr/static/multiverse/assets/js/biu/: actions.js
usr/templates/multiverse/: index.html
