[project]
name = "pixivbiu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cloudscraper==1.2.71",
    "flask==2.2.5",
    "idna==3.8",
    "importlib-metadata==6.7.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.4",
    "loguru>=0.7.3",
    "markupsafe==2.1.5",
    "pillow==10.4.0",
    "pixivpy3==3.7.5",
    "pyparsing==3.1.4",
    "pysocks==1.7.1",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "tqdm>=4.67.3",
    "typing-extensions==4.7.1",
    "urllib3==2.0.7",
    "werkzeug==2.2.3",
    "zipp==3.15.0",
]
