[project]
name = "pixivbiu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==2.2.5",
    "loguru>=0.7.3",
    "pixivpy3==3.7.5",
    "pysocks==1.7.1",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "tqdm>=4.67.3",
]
